Add boilerplate to banana-pancakes.html and add link to index.html

--- a/recipes/banana-pancakes.html
+++ b/recipes/banana-pancakes.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/banana-pancakes.html">Banana Pancakes</a>
+    <h1>Banana Pancakes</h1>
 </body>
 </html>
