Add image and description

--- a/recipes/banana-pancakes.html
+++ b/recipes/banana-pancakes.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Banana Pancakes</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F04%2F22%2F20334-Banana-Pancakes-mfs_01_1x1.jpg">
+    <h2>Description</h2>
+    <p>Have a tasty breakfast with these banana pancakes. This is an easy recipe that can be put together in 15 minutes. Only bananas and other simple kitchen supplies are needed.</p>
 </body>
 </html>
