--- a/recipes/banana-pancakes.html
+++ b/recipes/banana-pancakes.html
@@ -11,5 +11,27 @@
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F04%2F22%2F20334-Banana-Pancakes-mfs_01_1x1.jpg">
     <h2>Description</h2>
     <p>Have a tasty breakfast with these banana pancakes. This is an easy recipe that can be put together in 15 minutes. Only bananas and other simple kitchen supplies are needed.</p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Flour</li>
+        <li>Sugar</li>
+        <li>Baking Powder</li>
+        <li>Salt</li>
+        <li>An Egg</li>
+        <li>Milk</li>
+        <li>Vegetable Oil</li>
+        <li>Bananas</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine flour, sugar, salt, baking powder in one bowl</li>
+        <li>Combine egg, milk, vegetable oil, mashed bananas in another bowl</li>
+        <li>Add first bowl into second bowl and mix.</li>
+        <li>Pour batter in 1/4 cup portions onto oiled pan over medium-high heat for few minutes</li>
+        <li>Flip with spatula and cook for a few minutes</li>
+        <li>Serve and enjoy!</li>
+    </ol>
 </body>
 </html>
