--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/banana-pancakes.html">Banana Pancakes</a>
+    <a href="./recipes/caramelized-french-toast.html">Caramelized French Toast</a>
 </body>
 </html>
