--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/banana-pancakes.html">Banana Pancakes</a>
-    <a href="./recipes/caramelized-french-toast.html">Caramelized French Toast</a>
+    <ui>
+        <li><a href="./recipes/banana-pancakes.html">Banana Pancakes</a></li>
+        <li><a href="./recipes/caramelized-french-toast.html">Caramelized French Toast</a></li>
+    </ui>
 </body>
 </html>
