Add classic-waffles.html link to odin recipes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ui>
         <li><a href="./recipes/banana-pancakes.html">Banana Pancakes</a></li>
         <li><a href="./recipes/caramelized-french-toast.html">Caramelized French Toast</a></li>
+        <li><a href="./recipes/classic-waffles.html">Classic Waffles</a></li>
     </ui>
 </body>
 </html>
